--- a/style.css
+++ b/style.css
@@ -1,8 +1,117 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+
 html {
     box-sizing: border-box;
+    margin: 0;
+    padding : 0;
 }
 
 body {
     margin: 0;
+    padding : 0;
     min-height: 100vh;
+    display: flex;
+    justify-content : center;
+    align-items: center;
+    text-align: center;
 }
+
+/* Main Container */
+.main-container {
+    height : 500px;
+    width : 400px;
+    background-color: rgba(201, 201, 201, 0.521);
+    display : flex;
+    flex-direction : column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+}
+
+/* For title Image */
+.title-image-container {
+    position : relative;
+    height : 250px;
+    width : 250px;
+    top : -50px;
+}
+
+.title-image {
+    width : 100%;
+    height : 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+/* Title name , Artist name Container */
+.title-artist-name {
+    position : relative;
+    top: -20px;
+}
+
+h3 , h4 {
+    font-family : ;
+}
+
+
+/* Progress Bar Container */
+.progress-bar-container {
+    height : 5px;
+    width : 90%;
+    background-color: #fff;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+/* Progress Bar */
+.progress {
+    height : 100%;
+    /* To show 20% music is played */
+    width : 20%;
+    background-color: #000;
+    border-radius: 4px;
+    cursor : pointer;
+}
+
+/* Music and Time Container */
+.music-time {
+    position : relative;
+    display: flex;
+    justify-content : space-between;
+    top : -25px;
+    user-select: none;
+    cursor : default;
+}
+
+
+
+/* Music Icons Container */
+
+.music-icons-container {
+    position : relative;
+    top : 30px;
+    left : 20px;
+}
+
+.music-icons-container .fas {
+    margin-right : 50px;
+    vertical-align: middle;
+    cursor : pointer;
+    user-select: none;
+}
+
+.music-icons-container .fas:hover {
+    transform : scale(1.3);
+}
+
+.active {
+    transform : scale(1.3);
+    color : #e67e22;
+}
+
+
+
+
+
+
+
