--- a/style.css
+++ b/style.css
@@ -43,15 +43,21 @@ body {
     border-radius: 50%;
 }
 
+.rotate {
+    animation : spin 1s linear infinite;
+}
+
+@keyframes spin {
+    100% {transform : rotate(360deg);}
+}
+
 /* Title name , Artist name Container */
 .title-artist-name {
     position : relative;
     top: -20px;
 }
 
-h3 , h4 {
-    font-family : ;
-}
+
 
 
 /* Progress Bar Container */
@@ -67,7 +73,8 @@ h3 , h4 {
 .progress {
     height : 100%;
     /* To show 20% music is played */
-    width : 20%;
+    /* width : 20%; */
+    width : 0%;
     background-color: #000;
     border-radius: 4px;
     cursor : pointer;
